# robocop

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  deploy_and_install.ps1  deploy_nodes_03_04.ps1  edge_deploy.yaml  install.sh  onboard.sh  onboarding.md  pyproject.toml  requirements.txt  run_query.ps1  run_query_engine.bat  shared_runtime.py  skills-lock.json  update.sh
.cursor/: environment.json
demos/: browse-table-size-pr1-demo.py  browse-table-size-pr1-manual.md  email-placeholder-new-job-manual-demo.md  generate_jupyter_kerberos_login_demo.py  jupyter_kerberos_login_demo.md  prefill-existing-table-other.json  record-existing-table-schema-select-pr5.sh  record_email_placeholder_demo.py
dispatch/: __init__.py  __main__.py  advisor_data.py  app.py  app.tcss  asyncio_utils.py  capacity.py  config.py  errors.py  formatting.py  impala.py  job_lifecycle.py  jobs.py  kerberos.py  manifest.py  process.py  runner.py  runtime.py  sql.py  telemetry.py  version.py
dispatch-field-guide-screenshots/: manifest.txt
docs/: development-workflow.md  dispatch_onboarding.html  dispatch_user_story_completion_audit.md  dispatch_user_story_tracker.csv  edge-node-first-time-setup.md  edge-node-smoke-test.md  edge-node-tui-operating-model.md  edge-node-tui-reuse-kit.md  implementation-plan-production-testing.md  implementation-plan-v2.md  operating-model-conformance-investigation.md  plan.md  production_testing.md  query-optimization-advisor-spec.md  release-workflow.md  robocop-dispatch-goal-handoff-2026-06-22.md  shared-global-runtime-implementation-plan.md  ui-ux-screenshot-review-2026-05-16.md
mocks/: dev-env.sh  smtpd.py
plans/: 001-harden-launch-identifiers-and-csv-paths.md  002-make-launch-preflight-atomic-and-live.md  003-reconcile-stale-and-pending-jobs.md  004-bound-manifest-refresh-work.md  005-expand-runner-and-scr-contract-coverage.md  006-offline-install-guard.md  007-lint-typecheck-gates.md  008-ci.md  009-log-delta-cap.md  010-config-email-schema.md  011-version-drift.md  012-restrictive-perms.md  README.md  (+7 more)
scr/: _common.py  (+3 more)
(+152 files in other folders)
