[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch"
version = "1.1.0"
description = "Server-side TUI for launching Impala jobs through the Hadoop Query Launcher orchestrators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual==8.2.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[project.scripts]
dispatch = "dispatch.__main__:main"

[tool.setuptools.packages.find]
include = ["dispatch*"]

[tool.setuptools.package-data]
dispatch = ["*.tcss"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scr", "vendor", "tools/prod_tui", "mocks"]

[tool.ruff.lint]
# Start conservative: real errors + obvious style, not the full default set
# that churns the codebase. Expand later once the baseline is clean.
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter; keep to avoid noise

[tool.ruff.lint.per-file-ignores]
# `scr/` is production-sensitive and intentionally not part of the broad
# style/upgrade gate yet. Keep correctness coverage without import churn.
"scr/*.py" = ["I001", "UP", "W"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
platform = "linux"
packages = ["dispatch"]
exclude = ["scr/", "tools/prod_tui/", "mocks/"]
ignore_missing_imports = true
# Start non-strict: catch real type errors without forcing annotations on
# every function. The initial baseline also suppresses current TypedDict/Textual
# precision gaps so this gate can land without behavioral rewrites.
check_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
disable_error_code = ["arg-type", "assignment", "attr-defined", "list-item", "typeddict-item"]

[[tool.mypy.overrides]]
module = [
  "dispatch.sql",
  "dispatch.jobs",
  "dispatch.manifest",
]
check_untyped_defs = true
warn_unused_ignores = true
disable_error_code = []
